feat(bir): SPEC-002 stage A closure + BDD boolean algebra & canonical equivalence (WAL #2/#3)
- FR-A1: espresso/QM TT→CLAUSESET minimization, BirAvroCodec + bir_artifact.avsc (additive)
- FR-A2: BDD bugfixes (level-skip eval, explicit root), apply/ITE/not/constant with call-local computed cache
- equivalentTo: construction-order-independent structural comparison (ROBDD canonicality)
- INV-2..5: BirLimits/BirMetrics, fidelity validation + lossy factories, provenance enforcement, mutation gate
- FR-A3/A4: JMH legacy-vs-BIR baseline, @Deprecated neuron adapters
- Tests: 131 green in io.matrix.bir (16 classes); docs: AGENTS.md normative rewrite, WAL, BIR-THEORY-scan